# farsight-rc

./: .gitignore  .gitmodules  README.md  bom.csv
hardware/cad/: bottom_shell.20260216-132635.FCBak  bottom_shell.FCStd  joystick_cap.20260217-154535.FCBak  joystick_cap.20260217-162656.FCBak  joystick_cap.FCStd  joystick_caps.20260217-145242.FCBak  shell.20260215-201114.FCBak  shell.20260217-164751.FCBak  shell.20260223-194138.FCBak  shell.20260223-194536.FCBak  shell.20260302-173852.FCBak  shell.20260305-174944.FCBak  shell.FCStd  test.20260216-132558.FCBak  test.FCStd  top_shell.20260215-201240.FCBak  top_shell.20260216-115446.FCBak  top_shell.20260223-192111.FCBak  top_shell.20260302-173850.FCBak  top_shell.FCStd  transceiver.step
hardware/controller/: controller-all-pos.csv  controller.kicad_pcb  controller.kicad_prl  controller.kicad_pro  controller.kicad_sch  controller.step  fp-info-cache
hardware/lib/: controller.bak
hardware/pcb/: #auto_saved_files#  ESP32_Module.kicad_sch  controller.kicad_pcb  controller.kicad_pro  controller.kicad_sch  fp-info-cache  untitled.kicad_sch  untitled2.kicad_sch
hardware/transceiver/: transceiver.kicad_pcb  transceiver.kicad_prl  transceiver.kicad_pro  transceiver.kicad_sch  transceiver_log_missing3Dmodels.txt  transceiver_missing3Dmodels.txt
hardware/usb-serial-converter/: fp-info-cache  usb-serial-converter.kicad_pcb  usb-serial-converter.kicad_prl  usb-serial-converter.kicad_pro  (+1 more)
software/controller.old/main/: CMakeLists.txt  Kconfig.projbuild  controller.c
software/controller.old/main/include/: controller.h  softap.h
(+126 files in other folders)
